refactored it with easier imlementation